[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/title/buttons/StartGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/title/buttons/SourceCodeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/vt323.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/title/Title.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="TopRow" type="HBoxContainer" parent="Menu"]
margin_right = 1680.0
margin_bottom = 414.0
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="Menu/TopRow"]
margin_right = 1680.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainTitle" type="Label" parent="Menu/TopRow/Labels"]
margin_right = 1680.0
margin_bottom = 403.0
custom_fonts/font = SubResource( 1 )
text = "[GDLEARN #3]
Space Invaders"
align = 1
uppercase = true

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 418.0
margin_right = 1680.0
margin_bottom = 833.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1680.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="StartGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 127.0
margin_bottom = 197.0

[node name="SourceCodeButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 217.0
margin_bottom = 287.0

[node name="BottomRow" type="HBoxContainer" parent="Menu"]
margin_top = 837.0
margin_right = 1680.0
margin_bottom = 920.0

[node name="Labels" type="VBoxContainer" parent="Menu/BottomRow"]
margin_right = 1680.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Credits" type="Label" parent="Menu/BottomRow/Labels"]
margin_right = 1680.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "by brunodb3
version 1"
align = 1
uppercase = true

[connection signal="pressed" from="Menu/CenterRow/Buttons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/SourceCodeButton" to="." method="_on_SourceCodeButton_pressed"]
